--- a/login.html
+++ b/login.html
@@ -6,6 +6,7 @@
     <title>VanaPay Wallet App - Login Here</title>
     <link rel="shortcut icon" href="./img/favicon.png"sizes="16x16" type="image/png">
     <link rel="stylesheet" href="./css/main.css">
+    <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.32/dist/sweetalert2.min.css" rel="stylesheet">
 </head>
 <body>
     <!-- Background Carousel -->
@@ -46,6 +47,7 @@
 
     <script src="./js/slideshow.js"></script>
     <script type="module" src="./js/fetchLogin.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.32/dist/sweetalert2.all.min.js"></script>
     <!-- <script src="./js/main.js"></script> -->
 </body>
 </html>
