--- a/transfer.html
+++ b/transfer.html
@@ -69,15 +69,15 @@
                     </span>
                     <span>
                         <div class="transferInfoMe" style="background-color: #072844;height: 60px;">
-                            <div class="acctInfoText" style="display: inline-block;">
-                                <span id="acctNumTitle" style="margin: 50px;">Account Number</span><br>
-                                <span id="acctNum">100 1111 001</span>
+                            <div class="acctInfoText">
+                                <span id="acctNumTitle" style="padding: 60px;">Account Number</span><br>
+                                <span id="acctNum" style="margin-top: 60px;">100 1111 001</span>
                             </div>
                         </div>
     
                         <div class="transferInfoMe" style="height: 220px; background-color: #2573B5; color: white;">
                             <p style="opacity: 80%; font-size: 14px; margin: -20px -100px 0 0;">Need to Deposit? Click Here</p>
-                            <span style="position: absolute; bottom: 0; padding: 0 72px 80px 0; font-size: 15px; right: 0; opacity: 60%;">Account Balance</span>
+                            <span style="position: absolute; bottom: 0; padding: 0 72px 50px 0; font-size: 15px; right: 0; opacity: 60%;">Account Balance</span>
                             <div id="balance">10,000</div>
                         </div>
                     </span>
