--- a/dashboard.html
+++ b/dashboard.html
@@ -43,7 +43,7 @@
                     <span class="tooltiptext">Settings</span>
                 </div>
             </a>
-            <a href="" id="logout">
+            <a href="./login.html" onclick="logOut()">
                 <div class="tooltip">
                     <img src="./img/Icons/icons8-log-out-48.png" alt="" srcset="" class="sidenavIcon logout">
                     <span class="tooltiptext"> <b style="font-family: RocGrotesk-Bold; color: black;">LogOut</b></span>
