--- a/signup.html
+++ b/signup.html
@@ -6,6 +6,7 @@
     <link rel="shortcut icon" href="./img/favicon.png"sizes="16x16" type="image/png">
     <title>VanaPay Wallet App - Sign Up Here</title>
     <link rel="stylesheet" href="./css/main.css">
+    <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.32/dist/sweetalert2.min.css" rel="stylesheet">
 </head>
 <body>
     <div class="signUpBg">
@@ -47,5 +48,6 @@
 
     <script type="module" src="./js/fetchRegister.js"></script>
     <script src="./js/generateUsername.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.32/dist/sweetalert2.all.min.js"></script>
 </body>
 </html>
