--- a/login.html
+++ b/login.html
@@ -48,6 +48,7 @@
     <script src="./js/slideshow.js"></script>
     <script type="module" src="./js/fetchLogin.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.32/dist/sweetalert2.all.min.js"></script>
+    <script type="module" src="./js/generateSecurityQuestions.js"></script>
     <!-- <script src="./js/main.js"></script> -->
 </body>
 </html>
