--- a/transfer.html
+++ b/transfer.html
@@ -6,6 +6,8 @@
         <title>VanaPay Wallet App - Make a Transfer</title>
         <link rel="shortcut icon" href="./img/favicon.png"sizes="16x16" type="image/png">
         <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.32/dist/sweetalert2.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/izitoast/1.4.0/css/iziToast.css" integrity="sha512-DIW4FkYTOxjCqRt7oS9BFO+nVOwDL4bzukDyDtMO7crjUZhwpyrWBFroq+IqRe6VnJkTpRAS6nhDvf0w+wHmxg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/izitoast/1.4.0/css/iziToast.min.css" integrity="sha512-O03ntXoVqaGUTAeAmvQ2YSzkCvclZEcPQu1eqloPaHfJ5RuNGiS4l+3duaidD801P50J28EHyonCV06CUlTSag==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> -->
         <link rel="stylesheet" href="./css/main.css">
     </head>
@@ -60,10 +62,11 @@
                     <span class="transfer">
                         <h1 style="font-size: 30px; font-family: RocGrotesk-Bold;">Enter Account Number</h1>
                         <input type="text" id="accNumInput" class="input" placeholder="Enter Account Number Here" style="width: 500px; text-align: left; padding: 5px 10px 10px 40px;
-                        margin: 0; transition: ease 0.2s;">
+                        margin: 0; transition: ease 0.2s;" maxlength="10">
+                        <div id="receipientAccNo"></div>
                         <h1 style="font-size: 30px; font-family: RocGrotesk-Bold;">Enter Amount</h1>
                         <input type="text" id="amount" class="input" placeholder="Enter Amount Here" style="width: 500px; text-align: left; padding: 5px 10px 10px 40px;
-                        margin: 0; transition: ease 0.2s;">
+                        margin: 0; transition: ease 0.2s;" maxlength="18">
                         <div>
                             <button class="transferButton" id="makeTransfer">CONTINUE</button>
                         </div>
@@ -84,7 +87,13 @@
                     </span>
                 </div>
             </div>
+    
+
+    <script type="module" src="./js/main.js"></script>
+    <!-- <script type="module" src="./js/fetch.js"></script> -->
     <script type="module" src="./js/transfer.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.32/dist/sweetalert2.all.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/izitoast/1.4.0/js/iziToast.js" integrity="sha512-OmBbzhZ6lgh87tQFDVBHtwfi6MS9raGmNvUNTjDIBb/cgv707v9OuBVpsN6tVVTLOehRFns+o14Nd0/If0lE/A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/izitoast/1.4.0/js/iziToast.min.js" integrity="sha512-Zq9o+E00xhhR/7vJ49mxFNJ0KQw1E1TMWkPTxrWcnpfEFDEXgUiwJHIKit93EW/XxE31HSI5GEOW06G6BF1AtA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </body>
 </html>
