--- a/login.html
+++ b/login.html
@@ -23,18 +23,18 @@
     </div>
 
     <!-- Login Card -->
-    <div class="loginCard">
-        <img src="./img/favicon.png" alt="" srcset="" class="loginLogo">
+    <div class="login-card">
+        <img src="./img/favicon.png" alt="" srcset="" class="login-logo">
         <div class="card">
-            <h1 class="loginHeader">Login Here</h1>
+            <h1 class="login-header">Login Here</h1>
             <form class="loginForm">
                 <label for="Username">Enter Username:</label> <br>
                 <input type="text" placeholder="Enter Username Here" class="input" id="enterUsername"> <br>
                 <label for="Username">Enter Password:</label> <br>
                 <input type="password" placeholder="Enter Password Here" class="input" id="enterPassword"> <br>
-                <a href="#" class="forgotPasswordLink">Forgot Password? Click Here</a> <br>
-                <input type="button" value="Login" class="loginButton" id="loginBtn"><br>
-                <a href="./signup.html" class="signupLink">Need an Account? Sign up Here</a>
+                <a href="#" class="forgot-password-link">Forgot Password? Click Here</a> <br>
+                <input type="button" value="Login" class="login-button" id="loginBtn"><br>
+                <a href="./signup.html" class="credentials-link">Need an Account? Sign up Here</a>
             </form>
         </div>
     </div>
@@ -45,3 +45,4 @@
     <!-- <script src="./js/main.js"></script> -->
 </body>
 </html>
+ 
