--- a/transfer.html
+++ b/transfer.html
@@ -83,7 +83,7 @@
                     <div class="title" style="padding-bottom: 20px;">Make a Transfer Here</div>
                     <div class="input-title">Enter Beneficiary Account Number:</div>
                     <input type="text" class="form-input" name="" id="accnumber-input" placeholder="Enter Account Number Here" maxlength="10">
-                    <div id="beneficiary-accname"></div>
+                    <div id="beneficiary-accname" style="color: #055496; font-family: Satoshi-Bold; padding: 0 0 10px 0;"></div>
                     <div class="input-title">Enter Amount:</div>
                     <input type="text" class="form-input" name="" id="amount" placeholder="Enter Amount Here" maxlength="18">
                     <button id="initialize-transfer">Next</button>  
