--- a/deposit.html
+++ b/deposit.html
@@ -56,7 +56,7 @@
                 <span class="sidenav-text">Settings</span>
             </a>
         </div>
-        <div class="logout-button">
+        <div class="logout-button" id="logout">
             <img class="sidenav-icon" src="./img/Ic0ns/fi-rr-sign-out.png" alt="">
             <span class="sidenav-text">Logout</span>
         </div>
@@ -83,7 +83,8 @@
             <button id="initialize-deposit">Next</button>  
         </div>
     </div>
-    <script src="./js/deposit.js"></script>
+    <script type="module" src="./js/endpoints.js"></script>
+    <script type="module" src="./js/deposit.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.32/dist/sweetalert2.all.min.js"></script>
 </body>
 </html>
