--- a/transfer.html
+++ b/transfer.html
@@ -59,7 +59,7 @@
                         <span class="sidenav-text">Settings</span>
                     </a>
                 </div>
-                <div class="logout-button">
+                <div class="logout-button" id="logout">
                     <img class="sidenav-icon" src="./img/Ic0ns/fi-rr-sign-out.png" alt="">
                     <span class="sidenav-text">Logout</span>
                 </div>
