--- a/settings.html
+++ b/settings.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VanaPay Wallet App - Make a Transfer</title>
     <link rel="shortcut icon" href="./img/favicon.png"sizes="16x16" type="image/png">
+    <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.32/dist/sweetalert2.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
@@ -55,7 +56,7 @@
                 <span class="sidenav-text">Settings</span>
             </a>
         </div>
-        <div class="logout-button">
+        <div class="logout-button" id="logout">
             <img class="sidenav-icon" src="./img/Ic0ns/fi-rr-sign-out.png" alt="">
             <span class="sidenav-text">Logout</span>
         </div>
@@ -72,5 +73,6 @@
     </div>
     
     <script src="./js/settings.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.32/dist/sweetalert2.all.min.js"></script>
 </body>
 </html>
