--- a/transacHistory.html
+++ b/transacHistory.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VanaPay Wallet App - Transaction History</title>
     <link rel="shortcut icon" href="./img/favicon.png"sizes="16x16" type="image/png">
+    <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.32/dist/sweetalert2.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/main.css">
 </head>
 
@@ -56,7 +57,7 @@
                 <span class="sidenav-text">Settings</span>
             </a>
         </div>
-        <div class="logout-button">
+        <div class="logout-button" id="logout">
             <img class="sidenav-icon" src="./img/Ic0ns/fi-rr-sign-out.png" alt="">
             <span class="sidenav-text">Logout</span>
         </div>
@@ -101,6 +102,7 @@
 
     <script type="module" src="./js/endpoints.js"></script>
     <script type="module" src="./js/fetchTransacHistory.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.32/dist/sweetalert2.all.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 </body>
 </html>
