--- a/deposit.html
+++ b/deposit.html
@@ -83,6 +83,8 @@
             <button id="initialize-deposit">Next</button>  
         </div>
     </div>
+
+    <script type="module" src="./js/main.js"></script>
     <script type="module" src="./js/endpoints.js"></script>
     <script type="module" src="./js/deposit.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.32/dist/sweetalert2.all.min.js"></script>
