--- a/settings.html
+++ b/settings.html
@@ -72,7 +72,8 @@
         </span>
     </div>
     
-    <script src="./js/settings.js"></script>
+    <script type="module" src="./js/main.js"></script>
+    <script type="module" src="./js/settings.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.32/dist/sweetalert2.all.min.js"></script>
 </body>
 </html>
