--- a/settings.html
+++ b/settings.html
@@ -70,6 +70,55 @@
             <img src="./img/Ic0ns/fi-rr-headset.png" alt="" class="talkToAgent-icon">
             Talk to an Agent
         </span>
+
+        <div class="setting-options">
+
+            <h3 class="setting-options-title">Photo</h3>
+            <div class="setting-options-pic">
+                <img src="./img/img_avatar.png" alt="" class="user-settings-img">
+                <div class="setting-options-pic-btn">
+                    <span id = "change-pic" class="setting-options-btn">Change Photo</span>
+                    <span id = "remove-pic" class="remove-pic">Remove Photo</span>
+                    <div style="position: absolute; margin: 21px 0; color: #374957; font-size: 14px;">
+                        Pick a Picture up to 4MB, your Profile Picture will be Public
+                    </div>
+                </div>
+            </div>
+
+            <hr>
+
+            <h3 class="setting-options-title">Username & E-mail</h3>
+            <div style="margin: 18px 0; color: #374957; font-size: 14px;">
+                Kindly input your Desired Username and/or Email Address
+            </div>
+            <div class="setting-options-info"> 
+                <div>
+                    <input type="text" style="width: 29%; text-align: left; padding-left: 15px;" class="form-input" name="" id="username-input" placeholder="Enter Username Here">
+                    <span class="setting-options-btn" id="update-username">Update Username</span>
+                </div>
+                <div>
+                    <input type="email" style="width: 29%; text-align: left; padding-left: 15px;" class="form-input" name="" id="username-input" placeholder="Enter E-mail Here">
+                    <span class="setting-options-btn" id="update-email">Update Email</span>
+                </div>
+            </div>
+            <div style="margin: 21px 0; color: #374957; font-size: 14px;">
+                Do ensure that your Username is alphanumeric and your E-mail address is a valid E-mail address
+            </div>
+
+            <hr>
+
+            <h3 class="setting-options-title">Security: Password & PIN</h3>
+            <div style="margin: 21px 0; color: #374957; font-size: 14px;">
+                Kindly follow all modalities to have a change of Password and/or PIN
+            </div>
+            <div class="setting-options-info"> 
+                <div>
+                    <span class="setting-options-btn" id="update-username">Change Password</span>
+                    <span class="setting-options-btn" id="update-username">Change PIN</span>
+                </div>
+            </div>
+        </div>
+
     </div>
     
     <script type="module" src="./js/main.js"></script>
