--- a/deposit.html
+++ b/deposit.html
@@ -72,8 +72,8 @@
         </span>
 
         <div class="acc-info">
-            <div><span id="acc-number">2004 678 0980</span> - VanaPay Naira Account </div>
-            <div id="acc-balance">NGN 50,000.00</div>
+            <div><span id="acc-number">1000000001</span> - VanaPay Naira Account </div>
+            <div id="acc-balance">NGN 0.00</div>
         </div>
 
         <div class="deposit">
