--- a/transfer.html
+++ b/transfer.html
@@ -75,8 +75,8 @@
                 </span>
 
                 <div class="acc-info">
-                    <div><span id="acc-number">2004 678 0980</span> - VanaPay Naira Account </div>
-                    <div id="acc-balance">NGN 50,000.00</div>
+                    <div><span id="acc-number">10000000001</span> - VanaPay Naira Account </div>
+                    <div id="acc-balance">NGN 0.00</div>
                 </div>
 
                 <div class="transfer">
