--- a/settings.html
+++ b/settings.html
@@ -89,20 +89,24 @@
 
             <h3 class="setting-options-title">Username & E-mail</h3>
             <div style="margin: 18px 0; color: #374957; font-size: 14px;">
-                Kindly input your Desired Username and/or Email Address
+                Kindly input your Desired First Name, Last Name and/or  Address
             </div>
             <div class="setting-options-info"> 
                 <div>
-                    <input type="text" style="width: 29%; text-align: left; padding-left: 15px;" class="form-input" name="" id="username-input" placeholder="Enter Username Here">
-                    <span class="setting-options-btn" id="update-username">Update Username</span>
+                    <input type="text" style="width: 29%; text-align: left; padding-left: 15px;" class="form-input" name="" id="firstname-input" placeholder="Enter First Name Here">
+                    <span class="setting-options-btn" id="update-username">Update First Name</span>
                 </div>
                 <div>
-                    <input type="email" style="width: 29%; text-align: left; padding-left: 15px;" class="form-input" name="" id="username-input" placeholder="Enter E-mail Here">
-                    <span class="setting-options-btn" id="update-email">Update Email</span>
+                    <input type="text" style="width: 29%; text-align: left; padding-left: 15px;" class="form-input" name="" id="lastname-input" placeholder="Enter Last Name Here">
+                    <span class="setting-options-btn" id="update-username">Update Last Name</span>
+                </div>
+                <div>
+                    <input type="email" style="width: 29%; text-align: left; padding-left: 15px;" class="form-input" name="" id="address-input" placeholder="Enter Address Here">
+                    <span class="setting-options-btn" id="update-email">Update Address</span>
                 </div>
             </div>
             <div style="margin: 21px 0; color: #374957; font-size: 14px;">
-                Do ensure that your Username is alphanumeric and your E-mail address is a valid E-mail address
+                Do ensure that all necessary parameters are filled in appropriately
             </div>
 
             <hr>
