Committing in accordance with the prophecy.

--- a/signup.html
+++ b/signup.html
@@ -39,7 +39,7 @@
                 <label for="confirmPassword">Confirm Password:</label> <br>
                 <input type="password" placeholder="Confirm Password Here" class="input" id="confirmPassword"> <br>
                 <input type="button" value="Sign Up" class="signup-button" id="signupBtn"><br>
-                <a href="./login.html" class="credentials-link">Have an Account? Login Here</a>
+                <a href="./index.html" class="credentials-link">Have an Account? Login Here</a>
             </form>
         </div>
     </div>
